adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="container">
         <header>
-            <h1>Escala de Obreiros - CCMV</h1>
-            <p class="subtitle">Janeiro - Fevereiro 2025</p>
+            <div class="titulo-principal">Escala de Obreiros - CCMV</div>
+            <div class="subtitulo">Janeiro - Fevereiro 2025</div>
+            <div id="todas-escalas"></div>
         </header>
 
         <div class="escalas-container">
