adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="titulo-principal">Escala de Obreiros - CCMV</div>
-            <div class="subtitulo">Janeiro - Fevereiro 2025</div>
+            <div class="titulo-principal">Escala de Obreiros </div>
             <div id="todas-escalas"></div>
         </header>
 
